@@ -153,6 +153,8 @@ int starpu_asynchronous_opencl_copy_disabled(void);
 void starpu_profiling_init();
 void starpu_display_stats();
 
+void starpu_get_version(int *major, int *minor, int *release);
+
 #ifdef __cplusplus
 }
 #endif
